# Atividades_PS

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  realese.yml
controllers/: operations.py
models/: calculator.py
schemas/: operation_request.py
src/: App.java
src/controller/: Calc_controller.java
src/model/: Divisao.java  Multiplicacao.java  Operacao.java  Soma.java  Subtracao.java
src/view/: Calc.java
