[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculadora-fastapi-atividadeps"
version = "0.1.0"
description = "Uma API de calculadora simples usando FastAPI"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "ryanlimap", email = "pesagaz@hotmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22"
]

[tool.setuptools]
packages = ["models", "schemas", "controllers"]

